# ThinkBoard_SIH

./: index.html  package-lock.json  package.json
Backend/: package-lock.json  package.json
Backend/src/: index.js
Backend/src/aimodel/: aiChat.py  depressiontestmodel.py  main.py  mentalhealthmodel.py  nlpmodel.py  pyproject.toml  record_voice.py  voiceToText.py
Backend/src/aimodel/trained_models/NLP/: cv.pkl  modelnlpafraid.pkl  modelnlpangry.pkl  modelnlpanxious.pkl  modelnlpashamed.pkl  modelnlpawkward.pkl  modelnlpbored.pkl  modelnlpcalm.pkl  modelnlpconfused.pkl  modelnlpdisgusted.pkl  modelnlpexcited.pkl  modelnlpexercise.pkl  modelnlpfamily.pkl  modelnlpfood.pkl  modelnlpfriends.pkl  modelnlpfrustrated.pkl  modelnlpgod.pkl  modelnlphappy.pkl  modelnlphealth.pkl  modelnlpjealous.pkl  modelnlplove.pkl  modelnlpnostalgic.pkl  modelnlpproud.pkl  modelnlprecreation.pkl  modelnlpsad.pkl  modelnlpsatisfied.pkl  modelnlpschool.pkl  modelnlpsleep.pkl  modelnlpsurprised.pkl  modelnlpwork.pkl
Backend/src/aimodel/trained_models/PHQandGAD_Test/: modeltest.pkl
Backend/src/aimodel/trained_models/depression_test/: City_encoder.pkl  Degree_encoder.pkl  Dietary Habits_encoder.pkl  Profession_encoder.pkl  Sleep Duration_encoder.pkl  Study Satisfaction_encoder.pkl  model_depression.pkl
Backend/src/config/: db.js  generateToken.js  nodemailer.js  socket.js  upstash.js
Backend/src/controllers/: authController.js  emotionController.js  messageController.js  notesController.js  (+1 more)
Frontend/: package-lock.json  package.json  tailwind.config.js
Frontend/src/: App.jsx  main.jsx
(+46 files in other folders)
